[package]
name = "custom-stability-days"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "=0.4.44", default-features = false, features = ["serde"] }
hex = "=0.4.3"
hmac = "=0.13.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "=0.22.1"
getrandom = { version = "=0.4.2", features = ["wasm_js"] }
js-sys = "=0.3.97"
rsa = { version = "=0.10.0-rc.18", features = ["sha2"] }
signature = "=3.0.0-rc.10"
worker = "=0.8.1"
