[package]
name = "custom-stability-days"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "=0.22.1"
chrono = { version = "=0.4.44", default-features = false, features = ["serde"] }
hex = "=0.4.3"
hmac = "=0.13.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "=0.3.97"
wasm-bindgen = "=0.2.120"
wasm-bindgen-futures = "=0.4.70"
web-sys = { version = "=0.3.97", features = [
  "Crypto",
  "CryptoKey",
  "SubtleCrypto",
  "WorkerGlobalScope",
] }
worker = "=0.8.1"
